--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "express": "^4.16.3",
     "request": "^2.88.0",
     "body-parser": "^1.18.3",
-    "firebase": "^5.5.0"
+    "parse": "^2.1.0",
+    "parse-server": "^3.0.0"
   },
   "engines": {
     "node": "8.x"
