--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "request": "^2.88.0",
     "body-parser": "^1.18.3",
     "parse": "^2.1.0",
-    "parse-server": "^3.0.0"
+    "parse-server": "^3.0.0",
+    "moment-timezone": "^0.5.21"
   },
   "engines": {
     "node": "8.x"
